--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -336,4 +336,7 @@
     <string name="more_options">More Options</string>
     <string name="browser_alert">Do you want to open in new browser ?</string>
     <string name="url">http://terms.dignityhealth.org</string>
+    <string name="location">Location</string>
+    <string name="show_in_map">Show in the map</string>
+    <string name="map_alert">Do you want to open in map view ?</string>
 </resources>
