--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -339,4 +339,5 @@
     <string name="location">Location</string>
     <string name="show_in_map">Show in the map</string>
     <string name="map_alert">Do you want to open in map view ?</string>
+    <string name="mandatory"> , is a mandatory field</string>
 </resources>
