--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -150,6 +150,7 @@
     <string name="no_appointments_existing_patients">There are no appointments available for existing patients</string>
     <string name="next_available">Next Available</string>
     <string name="call_for_todays_appointmentss">Please call for today\'s appointments</string>
+    <string name="call_for_more_appointments">Please call for more appointments</string>
     <string name="years">Years</string>
     <string name="gps_dialog_message">Your GPS seems to be disabled, do you want to enable it?</string>
     <string name="caregiver_name">Caregiver Name</string>
