--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -928,6 +928,7 @@
     <string name="my_care_providers_desc">Choose a doctor below and we\'ll get you into the waiting room.</string>
     <string name="choose_practice">Choose Practice</string>
     <string name="choose_doctor">Choose Doctor</string>
+    <string name="next_available_provider">Next Available Provider</string>
     <string name="my_care_reason_guest_sug">Would you like to invite a guest to your visit?</string>
     <string name="my_care_reason_phone_sug">What is your phone number in case the video visit dropped?</string>
     <string name="my_care_reason_sug">What is the for you visit today?</string>
