--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -343,4 +343,5 @@
     <string name="mandatory"> , is a mandatory field</string>
     <string name="appointment_me">this appointment for me</string>
     <string name="appointment_family_member">this appointment for family member</string>
+    <string name="enter_pass_for_sec_change">Enter Password for security question change</string>
 </resources>
