--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -908,6 +908,7 @@
     <string name="welcome">Welcome!</string>
     <string name="mycare_desc">Video visits are a convenient way to get immediate care and questions answered.</string>
     <string name="enter_waiting_room">Enter Waiting Room</string>
+    <string name="get_started">Get Started</string>
     <string name="personal_information">Personal Information</string>
     <string name="your_profile_is_almost_complete">Your profile is almost complete.</string>
     <string name="medical_history">Medical History</string>
