--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -917,6 +917,7 @@
     <string name="what_medications_are_you_taking">What medications are you taking?</string>
     <string name="no_medications_listed">You have no medications</string>
     <string name="pharmacy">Pharmacy</string>
+    <string name="visit_summary">Visit Summary</string>
     <string name="choose_your_preferred_pharmacy">Choose your preferred pharmacy.</string>
     <string name="mycare_now">My Care Now</string>
     <string name="med_history">My Medical History</string>
