Medical History: save conditions and allergies selected.

--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -375,6 +375,10 @@
     <!-- Vitals -->
 
     <!-- Medical History -->
+    <string name="conditions">Conditions</string>
+    <string name="allergies">Allergies</string>
+    <string name="no_conditions">I don\'t have any conditions</string>
+    <string name="no_allergies">I don\'t have any allergies</string>
 
     <!-- Medications -->
 
