--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -453,6 +453,7 @@
     <string name="reason">Reason</string>
     <string name="visit_cost_desc">Your total is $</string>
     <string name="waiting_room_title">Waiting Room</string>
+    <string name="view_previous_visits">View Previous Visits</string>
     <string name="your_visit_has_ended">Your visit has ended.</string>
 
     <!-- TODO: Remove or change this placeholder text -->
