--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -424,6 +424,7 @@
     <string name="mycare_desc">Video visits are a convenient way to get immediate care and questions answered.</string>
     <string name="get_started">Get Started</string>
     <string name="personal_information">Personal Information</string>
+    <string name="my_personal_information">My Personal Information</string>
     <string name="your_profile_is_almost_complete">Your profile is almost complete.</string>
     <string name="medical_history">Medical History</string>
     <string name="complete_your_medical_history">Complete your medical history.</string>
