--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -150,8 +150,8 @@
     <string name="new_update_available">New Update Available!</string>
     <string name="no_recent_providers">No Recent Providers to show. Tap Find Care to start.</string>
     <!--Dashboard-->
-    <string name="db_text_one">Teaching Kids About Germs at School.</string>
-    <string name="db_text_two">Help High School Athletes Avoid Injury.</string>
+    <string name="db_text_one">Hit the Slopes: Mountain Safety Tips for Skiers and Snowboarders</string>
+    <string name="db_text_two">Moderate Drinking: How to Avoid Overindulging This Winter</string>
     <string name="db_readmore">Read More</string>
     <string name="db_profile_alert_one">Don\'t have a saved Profile. Retrieving profile now…</string>
     <string name="db_profile_alert_two">Already have a Profile Singleton. Updating the view…</string>
