--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -378,6 +378,7 @@
     <!-- Medical History -->
     <string name="conditions">Conditions</string>
     <string name="allergies">Allergies</string>
+    <string name="allergic_to">Allergic To: </string>
     <string name="no_conditions">I don\'t have any conditions</string>
     <string name="no_allergies">I don\'t have any allergies</string>
 
