Fixed issue: In “Choose Doctor” screen, tap on doctor, navigate to screen., the Title is not Payment, it should be “Intake”

--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -397,6 +397,7 @@
     <!-- Visit Cost -->
     <string name="visit_cost_coupon_code">Coupon Code</string>
     <string name="visit_cost_apply">Apply</string>
+    <string name="payment">Payment</string>
 
     <!-- Payment Information -->
 
