String file changes

--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -474,6 +474,7 @@
     <string name="doctor_s_office">Doctor\'s Office</string>
     <string name="done_nothing">Done Nothing</string>
     <string name="finish">Finish</string>
+    <string name="loc_suggestion">location suggestions available swipe to select</string>
 
     <!-- TODO: Remove or change this placeholder text -->
 
