--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -386,6 +386,7 @@
     <!-- Medications -->
 
     <!-- Add Medication -->
+    <string name="add_additional_medication">Add Additional Medication</string>
 
 
     <!-- Allergies -->
