Fixed: Added functionality for label "Add Medications" to medications screen Enhanced Search functionality to be similar with iOS on medications screen Added elevation to search bar to match up the look with Zeplin

--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -387,7 +387,7 @@
     <!-- Medications -->
 
     <!-- Add Medication -->
-    <string name="add_additional_medication">Add Additional Medication</string>
+    <string name="add_additional_medication">+&#160;Add Additional Medication</string>
 
 
     <!-- Allergies -->
