"Appointment types" string is changed to "Please choose an appointment type" to match up with iOS (updated upon QA's request)

--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -138,6 +138,7 @@
     <string name="save_profile_title">Save Changes</string>
     <string name="save_profile_message">Do you wish to save this information for later?</string>
     <string name="search_this_area">Search This Area</string>
+    <string name="appointment_types">Please choose an appointment type</string>
     <string name="no_appointments_available">There are no times available this month. Please try another month.</string>
     <string name="no_appointments_new_patients">There are no appointments available for new patients</string>
     <string name="next_available">Next Available</string>
