Can now select AmWell Environment

--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="stage">Stage</string>
     <string name="slot1">Slot1</string>
     <string name="prod">Prod</string>
+    <string name="iot">IoT</string>
 
     <!-- Strings related to login & enrollment-->
     <string name="prompt_first_name">First Name</string>
