--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -476,6 +476,20 @@
 
     <string name="pharmacy">Pharmacy</string>
     <string name="visit_summary">Visit Summary</string>
+
+    <string name="visit_summary_email">Email me a confidential summary</string>
+    <string name="visit_summary_email_agree">I acknowledge I\'m sending confidential medical information through unsecure email</string>
+    <string name="visit_summary_email_completed">Emailed visit summary successfully</string>
+    <string name="visit_summary_email_failed">Emailing visit summary failed</string>
+    <string name="email_already_added">Email address already added</string>
+    <string name="email_already_added_notchecked">Email address already added, please select it.</string>
+    <string name="email_none_selected">Select Email addresses</string>
+
+    <string name="email_hint">name@email.com</string>
+    <string name="email_agreement_missing">Please check email confidentiality agreement</string>
+    <string name="email_total_reached">Please check email confidentiality agreement</string>
+    <string name="add_additional_email">+&#160;Add Additional Email</string>
+
     <string name="feedback">Feedback</string>
     <string name="feedback_choose_answer">Please select an answer to the survey</string>
     <string name="feedback_completed">Feedback completed successfully</string>
